fix stretched illustration on home page

--- a/resources/assets/styles/layouts/_home.scss
+++ b/resources/assets/styles/layouts/_home.scss
@@ -169,6 +169,7 @@
       display: flex;
       width: 774px;
       max-width: 80%;
+      height: auto;
     }
 
     h2 {
